--- a/DockerfileFull
+++ b/DockerfileFull
@@ -7,7 +7,7 @@ RUN apk update && apk add \
 
 # Move default.conf into /etc/nginx/conf.d/
 #COPY default.conf /etc/nginx/conf.d/default.conf
-COPY default.conf /etc/nginx/nginx.conf
+COPY default.conf /etc/nginx/sites-available/default
 
 # create folder and copy application into folder
 RUN mkdir G5V
