--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,6 @@
 # These are supported funding model platforms
 
 ko_fi: phlexplexico
+patreon: phlexplexico
+github: phlexplexico
+custom: https://steamcommunity.com/tradeoffer/new/?partner=65378466&token=G3t4Gn5V
