--- a/DockerfileLight
+++ b/DockerfileLight
@@ -1,3 +1,4 @@
 FROM nginx:mainline-alpine
+CMD envsubst < .env
 COPY ./dist /usr/share/nginx/html
 COPY default.conf /etc/nginx/conf.d/default.conf
