--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -12,15 +12,15 @@ jobs:
       fail-fast: false
     steps:
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2.1.0
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2.2.1
       - id: string
-        uses: ASzc/change-string-case-action@v2
+        uses: ASzc/change-string-case-action@v5
         with:
           string: ${{ github.repository_owner }}
-      - uses: actions/checkout@v2
-      - uses: docker/login-action@v1
+      - uses: actions/checkout@v2.5.0
+      - uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -28,10 +28,12 @@ jobs:
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: install
-      - uses: borales/actions-yarn@v3.0.0
+      - uses: actions/setup-node@v3.5.1
         with:
-          cmd: build
-      - uses: docker/build-push-action@v2
+          node-version: 16
+          cache: 'yarn'
+          run: yarn build
+      - uses: docker/build-push-action@v3.2.0
         with:
           context: .
           file: DockerfileLight
