--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TOKEN }}
       - uses: actions/setup-node@v3.5.1
         with:
           node-version: 16
